--- a/TuringPPT.tex
+++ b/TuringPPT.tex
@@ -9,7 +9,7 @@
 \usepackage[slantfont,boldfont]{xeCJK}
 \setmainfont{Times New Roman}
 \setCJKmainfont{Songti SC}
- \setCJKfamilyfont{song}{Songti SC}
+\setCJKfamilyfont{song}{Songti SC}
 
 
 
@@ -20,23 +20,42 @@
 %\setmonofont{STFangsong} % 英文等宽字体
 %\setsansfont{Times} % 英文无衬线字体
 
-\usepackage{tikz}%绘图
-\usetikzlibrary{positioning} %on grid
-\usetikzlibrary{automata} %style
 \usepackage{fontspec}%字间距控制?
 \usepackage{tikz}%绘图
 \usetikzlibrary{positioning} %on grid
 \usetikzlibrary{automata} %style?
 \usetikzlibrary{shapes,snakes}%各中形状
+
+\usepackage{picinpar}
+
 %%%%%%%%%%%%%%%%%%%
 \usepackage[english]{babel}
 % or whatever
-
+\usepackage{indentfirst}
+\setlength{\parindent}{2em} %首行缩进
 
 \usepackage{caption}
 
+\usepackage{wrapfig}
+
+
+\newcommand{\chuhao}{\fontsize{42pt}{\baselineskip}\selectfont}
+\newcommand{\xiaochuhao}{\fontsize{36pt}{\baselineskip}\selectfont}
+\newcommand{\yihao}{\fontsize{28pt}{\baselineskip}\selectfont}
+\newcommand{\erhao}{\fontsize{21pt}{\baselineskip}\selectfont}
+\newcommand{\xiaoerhao}{\fontsize{18pt}{\baselineskip}\selectfont}
+\newcommand{\sanhao}{\fontsize{15.75pt}{\baselineskip}\selectfont}
+\newcommand{\sihao}{\fontsize{14pt}{\baselineskip}\selectfont}
+\newcommand{\xiaosihao}{\fontsize{12pt}{\baselineskip}\selectfont}
+\newcommand{\wuhao}{\fontsize{10.5pt}{\baselineskip}\selectfont}
+\newcommand{\xiaowuhao}{\fontsize{9pt}{\baselineskip}\selectfont}
+\newcommand{\liuhao}{\fontsize{7.875pt}{\baselineskip}\selectfont}
+\newcommand{\qihao}{\fontsize{5.25pt}{\baselineskip}\selectfont}
+
 \usepackage{times}
 \logo{\includegraphics[height=0.1\textwidth]{figures/tjdx.png}}
+
+
 
 \title[图灵奖获得者介绍] % (optional, use only with long paper titles)
 {1976年图灵奖获得者}
@@ -69,44 +88,351 @@
   \tableofcontents
 \end{frame}
 
-\section{生平简介}
+\section{简介}
 \begin{frame}{1976年的两位图灵奖得主}
-\pause
+	\begin{figure}[htbp]
+		\begin{minipage}{0.4\textwidth}
+			\centering\includegraphics[scale=0.3]{figures/lb2.eps}
+			\caption*{Michael O. Rabin}
+		\end{minipage}
+		\begin{minipage}{0.4\textwidth}
+			\centering\includegraphics[scale=0.3]{figures/sct.eps}
+			\caption*{Dana Steward Scott}
+		\end{minipage}
+	\end{figure}
+\end{frame}
+
+\subsection{迈克尔·拉宾}
+\begin{frame}{迈克尔·拉宾}
+	\only<1>{
+		\begin{figure}[htbp]
+			\begin{minipage}[b]{0.3\textwidth}
+				\centering\includegraphics[scale=0.2]{figures/lb.eps}
+			\end{minipage}
+			\begin{minipage}[b]{0.3\textwidth}
+				\centering\includegraphics[scale=0.07]{figures/lb3.eps}
+			\end{minipage}
+			\begin{minipage}[b]{0.3\textwidth}
+				\centering\includegraphics[scale=0.27]{figures/lb4.eps}
+			\end{minipage}
+			\caption*{\tiny 迈克尔·拉宾}
+		\end{figure}
+		
+		\centering{\wuhao{拉宾现现在就职于哈弗大学\\
+				电子邮箱是: \href{mailto:rabin@deas.Harvard.edu}{\textcolor{blue}{\underline{rabin@deas.Harvard.edu}}}\\
+				电话：（617) 496-6294
+				}}}
+
+	\only<2>{\xiaowuhao{
+		\begin{itemize}
+			\item 1931年9月1日 出生于德国布雷斯劳(二战后成为波兰弗罗茨瓦夫)
+			\item 1953年 获希伯来大学理学硕士(22岁)
+			\item 1956年 获普林斯顿大学博士学位(25岁)
+			\item 1959年 与达纳斯·斯科特共同发表“有限自动机与其判定性问题”(28岁)
+			\item 1975年 发明“米勒-拉宾素数检验”(44岁)
+			\item 1976年 获得图灵奖，发表“计算复杂性”演讲(45岁)
+			\item 1979年 拉宾发明第一个非对称密码系统—拉宾密码系统(48岁)
+			\item 1981年 拉宾提出“不经意传输”技术(50岁)
+			\item 1987年 和查理德·卡普提出字符串搜索“拉宾卡普算法”(56岁)
+		\end{itemize}}}
+\end{frame}
+
+\subsection{达纳·斯考特}
+\begin{frame}{达纳·斯考特}
+\only<1>{
+	\begin{figure}[htbp]
+		\begin{minipage}[b]{0.4\textwidth}
+			\centering\includegraphics[scale=0.4]{figures/sct.eps}			
+		\end{minipage}
+		\begin{minipage}[b]{0.4\textwidth}
+			\centering\includegraphics[scale=0.4]{figures/sct2.eps}
+		\end{minipage}
+	\end{figure}
+	
+	\centering{\wuhao{斯考特现在就职于卡内基梅隆大学\\
+		电子邮箱是：\href{mailto:dana.scott@cs.cmu.edu }{\textcolor{blue}{\underline{dana.scott@cs.cmu.edu}}}\\
+		电话：412-268-3881
+	}}
+	}
+\only<2>{\xiaowuhao{\begin{itemize}
+		\item 1932年10月11日生于美国加利福尼亚州
+		\item 1954年获加州大学伯克利分校学士学位(22岁)
+		\item 1958年获普林斯顿大学博士学位(26岁)
+		\item 1959年与迈克尔·拉宾共同发表“有限自动机与其判定性问题”(27岁)
+		\item 1972年获美国数学协会(AMS)的勒罗伊·斯蒂尔奖(40岁)
+		\item 1976年获得图灵奖，发表“逻辑与程序设计语言”(44岁)
+		\item 1997年获皇家瑞典皇家科学院颁发的罗尔夫·朔克逻辑和哲学将(65岁)
+		\item 2001年获捷克科学院颁发的博尔扎诺数学优异勋章(69岁)
+	\end{itemize}}}
+\end{frame}
+
+
+\tikzset{ state/.style={circle,draw=black}}
+\tikzset{ term/.style={circle,double,draw=black}}
+\tikzset{on/.style={circle,draw=black,fill=red}}
+
+
+\section{图灵奖内容}
+%想办法减少文字
+\begin{frame}
+	\begin{itemize}
+	\item
+	拉宾和斯考特证明，对于有限状态机来说，任何由非确定机解决的问题也可以在确定性机器上解决，并提出了之间的转换方法。
+	\item
+	非确定有限自动机被证明在语言翻译、文献检索和文字处理程序表达模式搜索的一种绝佳方式。
+	\end{itemize}
+\end{frame}
+	
+\subsection{DFA}
+\begin{frame}{确定有限自动机(DFA)}
+	\only<1>{一个确定有限自动机，对于每一个状态来说，他的下一个状态是确定的。}
+	\only<2->{
+	\begin{tikzpicture}[shorten >= 1pt, node distance=2cm, on grid, >=stealth]
+		\node (start) {start};
+		\node[state] (s_0) [right=of start] {0};
+		\node[state] (s_1) [right=of s_0] {1};
+		\node[state] (s_2) [below=of s_1]{2};
+		\node[term] (s_3) [right=of s_1]{3};
+		
+		\only<2>{\node[on]() at (s_0){0};}
+		\only<3>{\node[on]() at (s_1){1};}
+		\only<4-5>{\node[on]() at (s_2){2};}
+		\only<6>{\node[on]() at (s_3){3};}
+		
+		\path[->] (start) edge (s_0)
+			(s_0) edge node[above]{\textcolor<3>{red}a} (s_1)
+				edge node[below left]{b} (s_2)
+			(s_1) edge node[above]{b} (s_3)
+				edge node[right]{\textcolor<4>{red}a} (s_2)
+			(s_2) edge[loop below] node[below] {\textcolor<5>{red}a} ()
+			edge node[below right]{\textcolor<6>{red}b} (s_3);
+	\end{tikzpicture}
+	
+	识别串\textcolor<3>{red}a\textcolor<4>{red}a\textcolor<5>{red}a\textcolor<6>{red}b
+	}
+\end{frame}
+
+\subsection{NFA}
+\begin{frame}{非确定有限自动机(NFA)}
+\begin{itemize}
+	\item<1-> 拉宾和斯考特提出了非确定状态的有限自动机，引入了$\epsilon$
+	\item<2-> 非确定状态有限自动机很难用计算机来判别
+	\item<3-> 非确定状态有限自动机人很容易写出
+	\item<4-> 非确定自动机可以转化为自动机
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{非确定有限自动机(NFA)}
+使用下面最基本的方法就可以画出任意模式的NFA
+	\begin{itemize}
+		\only<1->{\item
+			$ab$}
+		\only<4->{\item
+			$a^*$}
+		\only<8->{\item
+			$a|b$}
+	\end{itemize}
+	
+	\only<2-3>{\centering\begin{tikzpicture}[shorten >= 1pt, node distance=2cm, on grid, >=stealth]
+		\uncover<2->{\node[state] (s_0)  {0};
+		\node[state] (s_1) [right=of s_0] {1};}
+		\uncover<3->{\node[state] (s_2) [right=of s_1]{2};}
+		\uncover<2->{\path[->](s_0) edge node[above]{a} (s_1);}
+		\uncover<3->{\path[->](s_1) edge node[above]{b} (s_2);}
+	\end{tikzpicture}}
+	\only<5-7>{\centering\begin{tikzpicture}[shorten >= 1pt, node distance=2cm, on grid, >=stealth]
+		\uncover<5->{\node[state] (s_0)  {0};
+		\node[state] (s_1) [right=of s_0] {1};}
+		\uncover<5->{\path[->] (s_0) edge node[above]{a}(s_1);}
+		\uncover<6->{\path[->] (s_1) edge[bend right=45] node[above]{$\epsilon$} (s_0);}
+		\uncover<7->{\path[->] (s_0) edge[bend right=45] node[below]{$\epsilon$} (s_1);}
+	\end{tikzpicture}}
+	\only<9->{\centering\begin{tikzpicture}[shorten >= 1pt, node distance=2cm, on grid, >=stealth]
+		\uncover<10->{\node[state] (s_0) {0};}
+		\node[state] (s_1) [above right=of s_0] {1};
+		\node[state] (s_2) [right=of s_1] {2};
+		\node[state] (s_3) [below right=of s_0] {3};
+		\node[state] (s_4) [right=of s_3] {4};
+		\uncover<10->{\node[state] (s_5) [below right=of s_2] {5};}
+		
+		\uncover<10->{\path[->] (s_0) edge node[above left]{$\epsilon$} (s_1)
+					edge node[below left]{$\epsilon$} (s_3);}
+		\path[->] (s_1) edge node[above]{a} (s_2)
+				(s_3) edge node[below]{b} (s_4);
+		\uncover<10->{\path[->] (s_2) edge node[above right]{$\epsilon$} (s_5)
+				(s_4) edge node[below right]{$\epsilon$} (s_5);}
+	\end{tikzpicture}}
+
+\end{frame}
+
+\begin{frame}{NFA试例}
+使用刚才的基本模式画出下面模式：$\textcolor<6>{red}{\textcolor<3>{red}{(\textcolor<2>{red}{ab})^*}|\textcolor<5>{red}{(\textcolor<4>{red}{ba})^*}}$
+	\begin{figure}\centering
+		\begin{tikzpicture}[shorten >= 1pt, node distance=1.5cm, on grid, >=stealth]
+			\node(start) {start};
+		\uncover<6->{\node[state](s_0) [right=of start]{0};}
+		\uncover<2->{\node[state](s_1)[above right =of s_0]{1};
+			\node[state](s_2)[right=of s_1]{2};
+			\node[state](s_3)[right=of s_2]{3};}
+		\uncover<4->{\node[state](s_4)[below right=of s_0]{4};
+			\node[state](s_5)[right=of s_4]{5};
+			\node[state](s_6)[right=of s_5]{6};}
+		\uncover<6->{\node[term](s_7)[below right=of s_3]{7};}
+			
+		\uncover<2->{\path[->] (s_1) edge node[above]{a} (s_2)
+					(s_2) edge node[above]{b} (s_3);}
+		\uncover<3->{\path[->] (s_3) edge[bend right=45] node[above]{$\epsilon$} (s_1)
+					(s_1) edge[bend right=45] node[above]{$\epsilon$} (s_3);}
+		\uncover<4->{\path[->] (s_4) edge node[above]{a} (s_5)
+					(s_5) edge node[above]{b} (s_6);}
+		\uncover<5->{\path[->] (s_6) edge[bend right=45] node[above]{$\epsilon$} (s_4)
+					(s_4) edge[bend right=45] node[above]{$\epsilon$} (s_6);}
+		\uncover<6->{\path[->] (s_0) edge node[above left] {$\epsilon$} (s_1)
+					(s_0) edge node[below left] {$\epsilon$} (s_4);
+			\path[->] (s_3) edge node[above right] {$\epsilon$} (s_7)
+					(s_6) edge node[below right] {$\epsilon$} (s_7);
+			\path[->] (start) edge (s_0);}
+	
+			\end{tikzpicture}
+		\caption*{\tiny识别$(ab)^*|(ba)^*$}
+	\end{figure}
+\end{frame}
+
+
+\section{拉宾的故事}
+\begin{frame}{拉宾小时候的故事}
+\begin{itemize}
+\item<1-> 1931年9月1日拉宾出生于德国布雷斯劳(二战后成为波兰弗罗茨瓦夫)的一个拉比家庭,父母是哲学和文学博士。
+\item<3-> 1935年,由于拉宾的父亲看到了反犹太主义,于是他们居家迁居到巴勒斯坦生活
+\item<5-> 之后到了以色列港口城市海法,在一所宗教小学念书
+\item<6-> 小时候的拉宾对微生物刚兴趣,一直梦想成为一名微生物学家
+\end{itemize}
 \begin{figure}[htbp]
-	\begin{minipage}{0.4\textwidth}
-	\centering
-		\includegraphics[scale=0.3]{figures/lb2.eps}
-		\caption*{Michael O. Rabin}
-	\end{minipage}
-	\pause
-	\begin{minipage}{0.4\textwidth}
-	\centering
-		\includegraphics[scale=0.3]{figures/sct.eps}
-		\caption*{Dana Steward Scott}
-	\end{minipage}
+	\uncover<2->{\begin{minipage}[b]{0.3\textwidth}\centering
+		\includegraphics[scale=0.13]{figures/flzwjt.eps}
+		\caption*{\tiny弗罗茨瓦夫大教堂}
+	\end{minipage}}
+	\uncover<4->{\begin{minipage}[b]{0.3\textwidth}\centering
+		\includegraphics[scale=0.25]{figures/hf.eps}
+		\caption*{\tiny海法中心花园}
+	\end{minipage}}
+	\uncover<7->{\begin{minipage}[b]{0.3\textwidth}\centering
+		\includegraphics[scale=0.12]{figures/wsw.eps}
+		\caption*{\tiny大肠杆菌}
+	\end{minipage}}
 \end{figure}
 \end{frame}
 
-\begin{frame}
-  \begin{theorem}
-    $A = B$.
-  \end{theorem}
-  \begin{proof}
-    \begin{itemize}
-    \item Clearly, $A = C$.\pause
-    \item As shown earlier,  $C = B$.\pause
-    \item Thus $A = B$.\pause
-    \end{itemize}
-  \end{proof}
-  \begin{example}
-  here is example
-  \end{example}
+
+\subsection{特殊的挑衅}
+\begin{frame}{特殊的挑衅}
+	\wuhao{\begin{figwindow}[0, l, {\uncover<2->{\includegraphics[scale=0.05]{figures/jhyb.eps}}},*{\uncover<2->{\tiny几何原本中译本}}]
+		\uncover<1->{有一天拉宾被罚在教室外面罚站,刚好有两个九年级的学生正那里解欧式几何，拉宾一直站在旁边看。}
+		\uncover<2->{恰好他们有个问题解不出来，反过来以此挑衅拉宾。}
+		\uncover<3->{偏偏拉宾解出来了。经过证明创建出关于线与圆的真理}
+	\end{figwindow}}
+	\uncover<3->{\centering\textcolor{red}{拉宾被其所具有的美所震撼。}}
+	\vspace{1em}
+	
+	\uncover<4->{之后拉宾就劝说其父亲将他送去莱利学院学习自然科学知识。}
+	\end{frame}
+	
+\subsection{图灵的诱惑}
+\begin{frame}{图灵停机}
+	\only<1>{英国科学家图灵}\only<2>{提出了一个无法由计算机解决的问题：}
+	\only<3>{能否为计算机$X$编程，使其在有限的时间内判断出计算机$Y$上运行的程序是否会停止运行？}%如果计算机Y停止运行，要运行一个程序通知X，则Y又要运行进行检测，显然是一个不可解决问题
+	\only<4>{这就是著名的\textbf{\textcolor{red}{图灵停机}}问题。}
+	\begin{figure}[htbp]
+		\uncover<1->{\begin{minipage}[b]{0.2\textwidth}\centering
+			\includegraphics[scale=0.15]{figures/tl.eps}
+			\caption*{\tiny图灵本人}
+		\end{minipage}}
+		\uncover<4->{\begin{minipage}[b]{0.2\textwidth}\centering
+			\includegraphics[scale=0.4]{figures/tltj.eps}
+			\caption*{\tiny图灵机}
+		\end{minipage}}
+		\uncover<5->{\begin{minipage}[b]{0.2\textwidth}\centering
+			\includegraphics[scale=0.2]{figures/bxfny.eps}
+			\caption*{\tiny宾夕法尼亚大学校徽}
+		\end{minipage}}
+		\uncover<6->{\begin{minipage}[b]{0.2\textwidth}\centering
+			\includegraphics[scale=0.4]{figures/plsd.eps}
+			\caption*{\tiny普林斯顿大学校徽}
+		\end{minipage}}
+	\end{figure}
+	
+	\uncover<5->{拉宾对此问题非常痴迷，由于以色列没有计算机，拉宾到了宾夕法尼亚大学攻读数学，}\uncover<6->{然后在普林斯顿大学攻读逻辑学博士。}
 \end{frame}
 
-\section{图灵和可计算性}
-\section{能够进行猜想的计算机}
-\section{计算的固有难度}
-\section{抛硬币做决定的计算机}
+\subsection{完美的合作}
+\begin{frame}{注定相遇}
+	\begin{itemize}\wuhao{
+		\item 拉宾的博士论文讨论了代数群的可计算问题，类似图灵定义了计算上解决与不可解决的界限一样，证明了关于群的某些问题不可计算。
+		\pause
+		\item 1957年，拉宾还在完成自己的论文，IBM研究院为他提供了一份暑期工作，让他自由从事任何感兴趣的项目。
+		\pause
+		\item 斯考特是逻辑学方面的天才，他们两个人一起研究，提出了一个概念：能够“猜测”的计算机。\pause
+		\item 他们的合作是非凡的，旺旺一个人先提出问题，然后各自回到自己的角落，然后另一个人很快就会给出解决方案。}
+	\end{itemize}
+\end{frame}
+
+\section{计算股有难度}
+\subsection{麦卡锡难题}
+\begin{frame}{麦肯锡的难题}
+\wuhao{
+有两个国家处于战争状态。两个国家分别向对方国家派送间谍。间谍完成任务后就返回自己的国家。当他们试图穿越边界时，有可能被自己方的守卫射杀。
+
+所以，他们需要有一套口令机制。假设间谍的素质都很高，能保守秘密。但边界上的守卫经常去当地酒吧聊天—所以不论你告诉他们什么，敌人都能打听出来。
+
+你是否能设计出一套方案，既能让间谍安全的回来，又不让敌人使用从守卫哪里打听到的信息把他们的间谍混进来？}
+\end{frame}
+
+\begin{frame}
+\wuhao{拉宾采用了一种叫做『单项』函数的算法得出了觉得方案。所谓的单项函数，就是一个方向的计算很容易，但是反过来很难。}
+	\uncover<2->{\begin{example}
+	\uncover<3->{$X = (b_mb_{m-1}b_{m-2}\cdots b_3b_2b_1)_{10}$}
+	\uncover<4->{$X^2 = (c_{2m}c_{2m-1}c_{2m-2}\cdots \underbrace{c_{m+m/2}\cdots c_{m-m/2}}_{Y}\cdots c_3c_2c_1)_{10}$}
+	\uncover<5->{$Y = (c_{m+m/2}\cdots c_{m-m/2})_{10}$}
+	\end{example}}
+	
+\uncover<6->{\wuhao{通过X计算Y很简单，但是通过Y计算X非常难}}
+\end{frame}
+
+\section{随机性理论}
+\subsection{素数检验}
+\begin{frame}
+	\wuhao{"素数"一直是数学家很关心的一个问题，而『素数判定算法』也是计算机界一个非常基本的算法，但就是这样一个非常基本甚至我们都会编写的算法，在实际应用中遇到什么问题了呢？2的127次方减1，是一个38位数，要验证它是否为素数，假设计算机每秒钟能运算1亿次除法，那么用当时最好的素数判断算法，也需要93年才能得出结论。}
+	\begin{example}
+	\uncover<3->{$28$的传统意义的见证者:}\\
+	\uncover<4->{$2, 4, 7, 14$}\\
+	\uncover<5->{$28$新式的见证者:}\\
+	\uncover<6->{$2,4,7,14, 6, 10, 8,16$}\\
+	\end{example}
+\end{frame}
+
+\begin{frame}{大数素数判断}
+	对于一个很大的数n来说
+	\begin{itemize}
+	\item 从$[1, n-1 ]$中随机取150一个数$r$
+	\item 一次验证其是否是新式见证者
+	\item 如果数新式见证者说明$n$是合数
+	\item 否则认为$n$是素数
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{错误的概率}
+	\uncover<1->{这个结论完全正确么？}
+	\uncover<2->{假设$K=150$，算法错误的情况是$n$为合数，检验结果数素数。\\}
+	\uncover<3->{也就是说每一次检验都随机到了$1\over4$的非新式见证者。}
+	\uncover<4->{那么150次检验都错误的概率是
+	\begin{equation*}
+		P(error) = {1\over4} ^{150} \approx  10^{-91}
+	\end{equation*}}
+	
+	可能性几乎为0.
+\end{frame}
+
+
 
 \end{document}
 
