--- a/TuringPPT.tex
+++ b/TuringPPT.tex
@@ -131,8 +131,8 @@
 			\item 1959年 与达纳斯·斯科特共同发表“有限自动机与其判定性问题”(28岁)
 			\item 1975年 发明“米勒-拉宾素数检验”(44岁)
 			\item 1976年 获得图灵奖，发表“计算复杂性”演讲(45岁)
-			\item 1979年 拉宾发明第一个非对称密码系统—拉宾密码系统(48岁)
-			\item 1981年 拉宾提出“不经意传输”技术(50岁)
+			\item 1979年 发明第一个非对称密码系统—拉宾密码系统(48岁)
+			\item 1981年 提出“不经意传输”技术(50岁)
 			\item 1987年 和查理德·卡普提出字符串搜索“拉宾卡普算法”(56岁)
 		\end{itemize}}}
 \end{frame}
@@ -161,7 +161,7 @@
 		\item 1959年与迈克尔·拉宾共同发表“有限自动机与其判定性问题”(27岁)
 		\item 1972年获美国数学协会(AMS)的勒罗伊·斯蒂尔奖(40岁)
 		\item 1976年获得图灵奖，发表“逻辑与程序设计语言”(44岁)
-		\item 1997年获皇家瑞典皇家科学院颁发的罗尔夫·朔克逻辑和哲学将(65岁)
+		\item 1997年获皇家瑞典皇家科学院颁发的罗尔夫·朔克逻辑和哲学奖(65岁)
 		\item 2001年获捷克科学院颁发的博尔扎诺数学优异勋章(69岁)
 	\end{itemize}}}
 \end{frame}
@@ -369,10 +369,12 @@
 	\begin{itemize}\wuhao{
 		\item 拉宾的博士论文讨论了代数群的可计算问题，类似图灵定义了计算上解决与不可解决的界限一样，证明了关于群的某些问题不可计算。
 		\pause
-		\item 1957年，拉宾还在完成自己的论文，IBM研究院为他提供了一份暑期工作，让他自由从事任何感兴趣的项目。
+		\item 1957年，拉宾还在完成自己的论文，IBM研究院为他和另一位年轻的逻辑学家提供了一份暑期工作，而这个人就是斯科特。
 		\pause
 		\item 斯考特是逻辑学方面的天才，他们两个人一起研究，提出了一个概念：能够“猜测”的计算机。\pause
-		\item 他们的合作是非凡的，旺旺一个人先提出问题，然后各自回到自己的角落，然后另一个人很快就会给出解决方案。}
+		\item 他们的合作是非凡的，往往一个人先提出问题，然后各自回到自己的角落，然后另一个人很快就会给出解决方案。\pause
+		\item 大概在三周之内就完成了所有工作，包括在论文中由于篇幅所限未能提及的理论。
+		}
 	\end{itemize}
 \end{frame}
 
@@ -388,7 +390,7 @@
 \end{frame}
 
 \begin{frame}
-\wuhao{拉宾采用了一种叫做『单项』函数的算法得出了觉得方案。所谓的单项函数，就是一个方向的计算很容易，但是反过来很难。}
+\wuhao{拉宾采用了一种叫做『单项』函数的算法得出了解决方案。所谓的单项函数，就是一个方向的计算很容易，但是反过来很难。}
 	\uncover<2->{\begin{example}
 	\uncover<3->{$X = (b_mb_{m-1}b_{m-2}\cdots b_3b_2b_1)_{10}$}
 	\uncover<4->{$X^2 = (c_{2m}c_{2m-1}c_{2m-2}\cdots \underbrace{c_{m+m/2}\cdots c_{m-m/2}}_{Y}\cdots c_3c_2c_1)_{10}$}
@@ -401,7 +403,7 @@
 \section{随机性理论}
 \subsection{素数检验}
 \begin{frame}
-	\wuhao{"素数"一直是数学家很关心的一个问题，而『素数判定算法』也是计算机界一个非常基本的算法，但就是这样一个非常基本甚至我们都会编写的算法，在实际应用中遇到什么问题了呢？2的127次方减1，是一个38位数，要验证它是否为素数，假设计算机每秒钟能运算1亿次除法，那么用当时最好的素数判断算法，也需要93年才能得出结论。}
+	\wuhao{『素数』一直是数学家很关心的一个问题，而『素数判定算法』也是计算机界一个非常基本的算法，但就是这样一个非常基本甚至我们都会编写的算法，在实际应用中遇到什么问题了呢？2的127次方减1，是一个38位数，要验证它是否为素数，假设计算机每秒钟能运算1亿次除法，那么用当时最好的素数判断算法，也需要93年才能得出结论。}
 	\begin{example}
 	\uncover<3->{$28$的传统意义的见证者:}\\
 	\uncover<4->{$2, 4, 7, 14$}\\
@@ -413,18 +415,18 @@
 \begin{frame}{大数素数判断}
 	对于一个很大的数n来说
 	\begin{itemize}
-	\item 从$[1, n-1 ]$中随机取150一个数$r$
-	\item 一次验证其是否是新式见证者
-	\item 如果数新式见证者说明$n$是合数
-	\item 否则认为$n$是素数
+	\item 从$(1, n-1)$中随机取150一个数
+	\item 逐个验证其是否是『见证者』
+	\item 如果有一个数是『见证者』，则n显然为合数
+	\item 否则，即150个数中都没有『见证者』，我们就宣称n为素数
 	\end{itemize}
 \end{frame}
 
 \begin{frame}{错误的概率}
-	\uncover<1->{这个结论完全正确么？}
+	\uncover<1->{这个结论绝对正确么？}
 	\uncover<2->{假设$K=150$，算法错误的情况是$n$为合数，检验结果数素数。\\}
-	\uncover<3->{也就是说每一次检验都随机到了$1\over4$的非新式见证者。}
-	\uncover<4->{那么150次检验都错误的概率是
+	\uncover<3->{也就是说必须在150次内每次都避免抽中『见证者』。}
+	\uncover<4->{
 	\begin{equation*}
 		P(error) = {1\over4} ^{150} \approx  10^{-91}
 	\end{equation*}}
