--- a/TuringPPT.tex
+++ b/TuringPPT.tex
@@ -538,9 +538,11 @@
 \uncover<6->{\wuhao{通过X计算Y很简单，但是通过Y计算X非常难}}
 \end{frame}
 
-\subsection{“世界末日”}
+\subsection{『世界末日』}
 \begin{frame}{固有难度}
-	平方取数的你运算可做，但是难度非常大，拉宾就提出了计算固有难度这一说法。\pause
+	『平方取中』是很难逆向的，那到底有多难？是不是无论采取任何方法，都需要大量的操作？\pause
+	
+	进一步地将问题一般化，研究任意给定计算机任务所需的最小工作量，即任务的固有难度。\pause
 	
 	有些运算是可计算的，但是由于其固有难度非常高，你几乎无法在有限时间内得出结论，所以它的可计算性也就是失去意义了。\pause
 	
@@ -551,14 +553,14 @@
 %	\end{figure}
 \end{frame}
 
-\begin{frame}{“世界末日”}
-	在拉宾那个年代，人工智能界有不少科学家还在执着于编写程序来验证“匹斯伯格系统的原理”。\pause
+\begin{frame}{『世界末日』}
+	在拉宾那个年代，人工智能界有不少科学家还在执着于编写程序来验证『匹斯伯格系统』的原理。\pause
 	
-	\textcolor{red}{拉宾干了一件很坑爹的事情！}\pause
+	\textcolor{red}{拉宾宣告了他们的集体失业！}\pause
 	
-	证明了一个哪怕只有100符号的系统，即使用1万台每秒一亿次的计算机，也要运行一万一年。\pause
+	一个哪怕只有100个符号的系统，即使用1万台每秒一亿次的计算机，也要运行一万亿年。\pause
 	
-	当拉宾的演讲结束，研究人工智能的人们都在惊呼这是世界末日，因为他们的实验室可能再也不会得到资助了。
+	当拉宾的演讲结束，相关的研究人员都在惊呼这是世界末日，因为他们的实验室可能再也不会得到资助了。
 	\begin{figure}
 		\begin{minipage}[b]{0.3\textwidth}\centering
 			\includegraphics[scale=0.15]{figures/mgd1.eps}
@@ -574,9 +576,10 @@
 
 \section{随机性理论}
 \begin{frame}{原始的素数判定算法}
+	『素数』一直是数学家很关心的一个问题，而『素数判定算法』也是计算机界一个非常基本的算法。\\
 	对于一个数n来说
 	\begin{itemize}
-	\item 从$(2, \sqrt(n))$中依次取数
+	\item 从$(1, \sqrt(n))$中依次取数
 	\item 逐个验证其是否是$n$的因子
 	\item 如果有一个数是$n$的因子，则$n$显然为合数
 	\item 否则，我们就宣称n为素数
@@ -584,7 +587,7 @@
 
 \end{frame}
 \begin{frame}{新式见证者}
-	\wuhao{『素数』一直是数学家很关心的一个问题，而『素数判定算法』也是计算机界一个非常基本的算法，但就是这样一个非常基本甚至我们都会编写的算法，在实际应用中遇到什么问题了呢？2的127次方减1，是一个38位数，要验证它是否为素数，假设计算机每秒钟能运算1亿次除法，那么用当时最好的素数判断算法，也需要93年才能得出结论。}
+	\wuhao{2的127次方减1，是一个38位数，要验证它是否为素数，假设计算机每秒钟能运算1亿次除法，那么用当时最好的素数判断算法，也需要93年才能得出结论。}
 	\begin{example}
 	\uncover<3->{$28$的传统意义的见证者:}\\
 	\uncover<4->{$2, 4, 7, 14$}\\
