--- a/TuringPPT.tex
+++ b/TuringPPT.tex
@@ -130,9 +130,9 @@
 			\item 1931年9月1日 出生于德国布雷斯劳(二战后成为波兰弗罗茨瓦夫)
 			\item 1953年 获希伯来大学理学硕士(22岁)
 			\item 1956年 获普林斯顿大学博士学位(25岁)
-			\item \textcolor{red}{1959年 与达纳斯·斯科特共同发表『有限自动机与其判定性问题』(28岁)}
+			\item 1959年 与达纳斯·斯科特共同发表『有限自动机与其判定性问题』(28岁)
 			\item 1975年 发明『米勒-拉宾素数检验』(44岁)
-			\item 1976年 获得图灵奖，发表『计算复杂性』演讲(45岁)
+			\item \textcolor{red}{1976年 获得图灵奖，发表『计算复杂性』演讲(45岁)}
 			\item 1979年 发明第一个非对称密码系统—拉宾密码系统(48岁)
 			\item 1981年 提出『不经意传输』技术(50岁)
 			\item 1987年 和查理德·卡普提出字符串搜索『拉宾卡普算法』(56岁)
@@ -160,9 +160,9 @@
 		\item 1932年10月11日生于美国加利福尼亚州
 		\item 1954年获加州大学伯克利分校学士学位(22岁)
 		\item 1958年获普林斯顿大学博士学位(26岁)
-		\item \textcolor{red}{1959年与迈克尔·拉宾共同发表『有限自动机与其判定性问题』(27岁)}
+		\item 1959年与迈克尔·拉宾共同发表『有限自动机与其判定性问题』(27岁)
 		\item 1972年获美国数学协会(AMS)的勒罗伊·斯蒂尔奖(40岁)
-		\item 1976年获得图灵奖，发表『逻辑与程序设计语言』(44岁)
+		\item \textcolor{red}{1976年获得图灵奖，发表『逻辑与程序设计语言』(44岁)}
 		\item 1997年获皇家瑞典皇家科学院颁发的罗尔夫·朔克逻辑和哲学奖(65岁)
 		\item 2001年获捷克科学院颁发的博尔扎诺数学优异勋章(69岁)
 	\end{itemize}}}
@@ -397,7 +397,7 @@
 \begin{frame}{颁奖词}
 因他们的合著论文『有限自动机与其判定性问题』。论文中引入了非确定自动机的概念，被证明是（计算理论科学研究中的）一个非常重要的概念。拉宾和斯科特的这篇经典论文成为了这个领域后续研究的源泉。
 
-\hfill—图领奖委员会
+\hfill—图灵奖委员会
 \end{frame}
 
 \section{拉宾的故事}
@@ -506,7 +506,7 @@
 \begin{frame}{固有难度}\liuhao{
 	『平方取中』是很难逆向的，那到底有多难？是不是无论采取任何方法，都需要大量的操作？\pause
 	
-	进一步地将问题一般化，研究任意给定计算机任务所需的最小工作量，即任务的固有难度。\pause
+	拉宾进一步地将问题一般化，研究任意给定计算机任务所需的最小工作量，即任务的固有难度。\pause
 	
 	有些运算是可计算的，但是由于其固有难度非常高，你几乎无法在有限时间内得出结论，所以它的可计算性也就是失去意义了。\pause}
 	
