--- a/TuringPPT.tex
+++ b/TuringPPT.tex
@@ -120,7 +120,7 @@
 			\caption*{\tiny 迈克尔·拉宾}
 		\end{figure}
 		
-		\centering{\wuhao{拉宾现现在就职于哈弗大学\\
+		\centering{\wuhao{拉宾现现在就职于哈佛大学\\
 				电子邮箱是: \href{mailto:rabin@deas.Harvard.edu}{\textcolor{blue}{\underline{rabin@deas.Harvard.edu}}}\\
 				电话：（617) 496-6294
 				}}}
@@ -176,7 +176,7 @@
 \section{拉宾的故事}
 \begin{frame}{拉宾的故事}
 \begin{itemize}
-\item<1-> 1931年9月1日拉宾出生于德国布雷斯劳(二战后成为波兰弗罗茨瓦夫)的一个拉比家庭,父母是哲学和文学博士。
+\item<1-> 1931年9月1日拉宾出生于德国布雷斯劳(二战后成为波兰弗罗茨瓦夫)的一个拉比家庭,父母是哲学和文学博士
 \item<3-> 1935年,由于拉宾的父亲看到了反犹太主义,于是他们居家迁居到巴勒斯坦生活
 \item<5-> 之后到了以色列港口城市海法,在一所宗教小学念书
 \item<6-> 小时候的拉宾对微生物刚兴趣,一直梦想成为一名微生物学家
