font size modify

--- a/TuringPPT.tex
+++ b/TuringPPT.tex
@@ -509,12 +509,13 @@
 \end{frame}
 
 \subsection{『世界末日』}
-\begin{frame}{固有难度}\liuhao{
+\begin{frame}{固有难度}
+\setlength{\parskip}{0em}
 	『平方取中』是很难逆向的，那到底有多难？是不是无论采取任何方法，都需要大量的操作？\pause
 	
 	拉宾进一步地将问题一般化，研究任意给定计算机任务所需的最小工作量，即任务的固有难度。\pause
 	
-	有些运算是可计算的，但是由于其固有难度非常高，你几乎无法在有限时间内得出结论，所以它的可计算性也就是失去意义了。\pause}
+	有些运算是可计算的，但是由于其固有难度非常高，你几乎无法在有限时间内得出结论，所以它的可计算性也就是失去意义了。\pause
 	
 	\begin{figure}
 		\begin{minipage}{0.4\textwidth}\centering
@@ -641,7 +642,7 @@
 
 孙渊汇
 \begin{description}
-\item[Blog] \href{http://syhkiller.github.io}{\textcolor{blue}{\underline{syhkiller.github.io}}}\\
+\item[Blog] \href{http://syhkiller.github.io}{\textcolor{blue}{\underline{syhkiller.github.io}}}
 \item[Github] \href{https://github.com/syhkiller}{\textcolor{blue}{\underline{https://github.com/syhkiller}}}
 \end{description}
 
