indent in minipage

--- a/TuringPPT.tex
+++ b/TuringPPT.tex
@@ -207,7 +207,8 @@
 	\end{minipage}
 	\hfill
 	\begin{minipage}{0.65\textwidth}
-		\uncover<1->{~~~~一天拉宾在教室外面罚站，刚好有两个九年级的学生正那里解欧式几何，拉宾一直站在旁边看。}
+	\setlength{\parindent}{1.5em}
+		\uncover<1->{一天拉宾在教室外面罚站，刚好有两个九年级的学生正那里解欧式几何，拉宾一直站在旁边看。}
 		\uncover<2->{恰好他们有个问题解不出来，反过来以此挑衅拉宾。}
 		\uncover<3->{偏偏拉宾解出来了，经过证明创建出关于线与圆的真理。}
 	\end{minipage}
@@ -296,7 +297,8 @@
 
 	\uncover<1->{确定有限自动机每一个状态后面的状态都是确定的，但是现实生活中有很多时候选择并不唯一。}
 
-	\begin{minipage}[h]{0.5\textwidth}	
+	\begin{minipage}[h]{0.5\textwidth}
+	\setlength{\parindent}{1.5em}
 		\liuhao{\textit{\uncover<2->{当我们在餐馆，菜单上有许多菜品，我们可能选择甜点，也可能选择主菜，这不是一个随机过程，但是确实是非确定的。}
 		\uncover<3->{当我们选择了某一个种菜品后，我们就进入了另一个状态，结果就是满意或者不满意，也就是接受或者拒绝。}}}
 	\end{minipage}
